--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="196x196" href="favicon-196.png">
     <link rel="apple-touch-icon" href="apple-icon-180.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>MapComponents + Vite + React + TS</title>
+    <title>Supabase Map</title>
   </head>
   <body>
     <div id="root"></div>
